Bug 118661 - LibreOffice remains in background after closing it (gen/gtk2)
Summary: LibreOffice remains in background after closing it (gen/gtk2)
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
6.2.0.0.alpha0+
Hardware: All All
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:6.2.0
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2018-07-10 09:29 UTC by Xisco Faulí
Modified: 2018-07-10 13:50 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2018-07-10 09:29:56 UTC
Steps to reproduce:
1. Open LibreOffice
2. Go to Help - About LibreOffice
3. Close the dialog
4. Close LibreOffice

-> LibreOffice remains in background

Reproduced in

Version: 6.2.0.0.alpha0+
Build ID: d0f44d8ba7e87aa263008d3cfc4e68294d783162
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded
Comment 1 Xisco Faulí 2018-07-10 09:32:26 UTC
Regression introduced by:

author	Kevin Dubrulle <kevin.dubrulle@gmail.com>	2018-07-07 13:34:20 +0200
committer	Noel Grandin <noel.grandin@collabora.co.uk>	2018-07-08 11:48:40 +0200
commit d0f44d8ba7e87aa263008d3cfc4e68294d783162 (patch)
tree 8527c62fb066366df2b40386c6544e670aa10a1a
parent a2193f8f33565cc896592acb9d3ab65c756d97fb (diff)
tdf#84323 - sal - add sane sleep interface: cleanup osl_waitThread
Replace osl_waitThread by osl::Thread::wait.
Use std::chrono instead of TimeValue.

Bisected with: bibisect-linux64-6.2

Adding Cc: to Kevin Dubrulle
Comment 3 Noel Grandin 2018-07-10 10:36:22 UTC
https://gerrit.libreoffice.org/#/c/57228/
Comment 4 Commit Notification 2018-07-10 12:28:15 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=fb9c1c191e76755ffa6acb09d4f50533cb589d1b

tdf#118661 LibreOffice remains in background after closing it

It will be available in 6.2.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Xisco Faulí 2018-07-10 13:50:12 UTC
Verified in

Version: 6.2.0.0.alpha0+
Build ID: c290f692dd28094d41dff686f3faa1c4e14b556e
CPU threads: 4; OS: Linux 4.13; UI render: default; VCL: gtk2; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group threaded


@Noel, thanks for the quick fix!!