tdf#118661 LibreOffice remains in background after closing it

regression from
    commit d0f44d8ba7e87aa263008d3cfc4e68294d783162
    tdf#84323 - sal - add sane sleep interface: cleanup osl_waitThread

Change-Id: I55c2fa6c8993cc6268b1c5d9331c665c401e8efe
Reviewed-on: https://gerrit.libreoffice.org/57228
Tested-by: Jenkins
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>